# dataset-recsys

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy_redis.sh  license.md  pyproject.toml
.github/workflows/: code-metrics-on-demand.yml  deploy-docs-on-demand.yml  docker-publish.yml  vulnerability-scan-on-demand.yml
data/datafinder/: __init__.py  loader.py
data/mathe/: __init__.py  loader.py  mathe_top20_recommendations.json
docs/: mkdocs.yml
docs/source/: index.md  license.md
notebooks/: datafinder.ipynb  dataset_recs.ipynb  recommendation_client.ipynb
src/: mathe_recs_pipeline.py  process_metadata.py  recommendation_client.py
src/recs_metrics/: __init__.py  item_item.py
src/services/: __init__.py  bedrock.py  dataset_recs_api.py
src/services/api_docs/: error_examples.json  valid_examples.json
src/tests/: test_dataset_recs_api.py
v0.0.7/: 404.html  index.html
v0.0.7/architecture/: index.html
v0.0.7/license/: index.html
v0.0.7/search/: search_index.json
